Refactor UI components and migrate to modular JS with improved verification modal

--- a/iso-manager-web/public/index.html
+++ b/iso-manager-web/public/index.html
@@ -405,7 +405,9 @@
         <!-- Modals will be created dynamically with JavaScript -->
     </div>
 
-    <!-- Custom JS -->
-    <script src="/js/main.js"></script>
+    <!-- Application Scripts -->
+    <script type="module" src="/js/ui.js"></script>
+    <script type="module" src="/js/main.js"></script>
+
 </body>
 </html>
